--- a/index.ejs
+++ b/index.ejs
@@ -12,9 +12,8 @@
     
     <link rel="author"          href="https://google.com/+FabioLenine"/>
     <link rel='stylesheet'      href="http://fonts.googleapis.com/css?family=Raleway:100"   type='text/css'>
-    <link rel="stylesheet"      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" >
-    <link rel="stylesheet"      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <link rel="stylesheet"      href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/normalize.min.css" >
+    <link rel="stylesheet"      href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/bootstrap.css" >
+    <link rel="stylesheet"      href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/normalize.css" >
     <link rel="stylesheet"      href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/main.css">
     <link rel="shortcut icon"   href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/favicon.ico" type="image/x-icon"/>
 
@@ -53,7 +52,7 @@
         </div>
     </header>
     <section id="intro" class="intro">
-        <h1>Novo maneira de sair para a night.</h1>
+        <h1>Nova maneira de sair para a night.</h1>
         <p>Não sabe onde está acontecendo as melhores baladas?</p>
         <p>Ou então, já está dentro da balada e não quer pegar a fila</p>
         <p>na hora de pagar?</p>
@@ -105,14 +104,14 @@
                                 <div>0X</div>
                             </li>
                             <li class="faq-title">
-                                <div>Duvida 0X</div>
+                                <div>Se acabar a bateria do meu celular na balada?</div>
                             </li>
                         </ul>
                     </a>
                 </div>
                 <div id="collapseOne" class="panel-collapse collapse in">
                     <div class="panel-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                        É simples, basta pedir emprestado para um amigo seu iPhone por alguns instantes. Então entre com o seu login e senha novamente e encontrará sua conta pronta para ser paga no seu cartão de crédito.
                     </div>
                 </div>
             </div>
@@ -124,14 +123,14 @@
                                 <div>0X</div>
                             </li>
                             <li class="faq-title">
-                                <div>Duvida 0X</div>
+                                <div>É seguro digitar os dados do meu cartão de crédito ou debito?</div>
                             </li>
                         </ul>
                     </a>
                 </div>
                 <div id="collapseTwo" class="panel-collapse collapse">
                     <div class="panel-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                        Oferecemos uma maneira fácil, segura e privada de pagar. O iChose foi desenvolvido para proteger as informações pessoais do usuário. Não coleta informação sobre a transação que possa ser relacionada com o cliente. E não armazenamos a sua senha ou número completo do cartão de crédito ou debito.
                     </div>
                 </div>
             </div>
@@ -143,14 +142,14 @@
                                 <div>0X</div>
                             </li>
                             <li class="faq-title">
-                                <div>Duvida 0X</div>
+                                <div>Posso pagar o meu consumo e o da minha namora ou amigos, no meu cartão de crédito?</div>
                             </li>
                         </ul>
                     </a>
                 </div>
                 <div id="collapseThree" class="panel-collapse collapse">
                     <div class="panel-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                        Sim, o iChose pensou nessa necessidade e permite que um usuário pague quantas comandas quiser, apenas assumindo o código da comanda.
                     </div>
                 </div>
             </div>
@@ -181,7 +180,7 @@
                 <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/logo_desc_footer.png" />
             </li>
             <li>
-                <a href="mailto:hello@ichose.com.br" target="_blank">hello@ichose.com.br</a>
+                <a href="mailto:hello@ichose.com.br" target="_blank">hello@ichose.com</a>
                 <span>+55 48 8822 9472</span>
             </li>
             <li>
