--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,7 @@ nav {
 
 
 header {
-    background-image: url(../img/bg_top.jpg);
+    background-image: url(https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/bg_top.jpg);
     width: auto;
     min-width: 960px;
     height: 480px;
@@ -119,7 +119,7 @@ header {
 header div {
     padding-top: 110px;
     height: 480px;
-    background-image: url(../img/handson.png);
+    background-image: url(https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/handson.png);
     background-repeat: no-repeat;
     background-position: right 90px;
 }
@@ -192,7 +192,7 @@ nav ul li:last-of-type {
     text-align: center;
     height: 280px;
     background-color: black;
-    background-image: url(../img/bg_middle.jpg);
+    background-image: url(https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/bg_middle.jpg);
     background-repeat: no-repeat;
     background-position: center;
     color: #f2f2f2;
@@ -393,6 +393,6 @@ footer:before {
     width: 100%;
     height: 60px;
     opacity: 0.8;
-    background-image: url(../img/bg_top.jpg);
+    background-image: url(https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/bg_top.jpg);
     background-position: center top;
 }
