--- a/index.ejs
+++ b/index.ejs
@@ -101,7 +101,7 @@
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
                         <ul class="faq-top">
                             <li class="faq-count">
-                                <div>0X</div>
+                                <div>01</div>
                             </li>
                             <li class="faq-title">
                                 <div>Onde encontro o iChose?</div>
@@ -120,7 +120,7 @@
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
                         <ul class="faq-top">
                             <li class="faq-count">
-                                <div>0X</div>
+                                <div>02</div>
                             </li>
                             <li class="faq-title">
                                 <div>Quanto custa o iChose na App Store?</div>
@@ -139,7 +139,7 @@
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
                         <ul class="faq-top">
                             <li class="faq-count">
-                                <div>0X</div>
+                                <div>03</div>
                             </li>
                             <li class="faq-title">
                                 <div>Se acabar a bateria do meu celular na balada?</div>
@@ -158,7 +158,7 @@
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
                         <ul class="faq-top">
                             <li class="faq-count">
-                                <div>0X</div>
+                                <div>04</div>
                             </li>
                             <li class="faq-title">
                                 <div>É seguro digitar os dados do meu cartão de crédito ou debito?</div>
@@ -177,7 +177,7 @@
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
                         <ul class="faq-top">
                             <li class="faq-count">
-                                <div>0X</div>
+                                <div>05</div>
                             </li>
                             <li class="faq-title">
                                 <div>Posso pagar o meu consumo e o da minha namora ou amigos, no meu cartão de crédito?</div>
@@ -196,7 +196,7 @@
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
                         <ul class="faq-top">
                             <li class="faq-count">
-                                <div>0X</div>
+                                <div>06</div>
                             </li>
                             <li class="faq-title">
                                 <div>Para usar o iChose tem que pagar alguma taxa ou mensalidade?</div>
@@ -215,7 +215,7 @@
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
                         <ul class="faq-top">
                             <li class="faq-count">
-                                <div>0X</div>
+                                <div>07</div>
                             </li>
                             <li class="faq-title">
                                 <div>Se o iPhone for perdido, furtado ou roubado, poderá outra pessoa usá-lo para pagar a sua conta?</div>
@@ -234,7 +234,7 @@
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
                         <ul class="faq-top">
                             <li class="faq-count">
-                                <div>0X</div>
+                                <div>08</div>
                             </li>
                             <li class="faq-title">
                                 <div>Minhas informações pessoais serão usadas para outros fins?</div>
@@ -248,12 +248,12 @@
                     </div>
                 </div>
             </div>
-                        <div class="panel panel-default">
+            <div class="panel panel-default">
                 <div class="panel-heading">
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
                         <ul class="faq-top">
                             <li class="faq-count">
-                                <div>0X</div>
+                                <div>09</div>
                             </li>
                             <li class="faq-title">
                                 <div>Se o cliente argumentar que já efetuou o pagamento, mas não consta no sistema. O que fazer?</div>
