--- a/index.ejs
+++ b/index.ejs
@@ -166,7 +166,7 @@
                         </ul>
                     </a>
                 </div>
-                <div id="collapseThree" class="panel-collapse collapse">
+                <div id="collapseFour" class="panel-collapse collapse">
                     <div class="panel-body">
                         Não cobramos mensalidades, apenas no ato do pagamento do seu consumo o valor de R$ 4,39 / por comanda paga ou comprada como pré-pago. No caso dos ingressos, cobramos apenas 6% do valor do ingresso.
                     </div>
@@ -185,7 +185,7 @@
                         </ul>
                     </a>
                 </div>
-                <div id="collapseThree" class="panel-collapse collapse">
+                <div id="collapseFive" class="panel-collapse collapse">
                     <div class="panel-body">
                         Não poderá pagar de forma alguma. Pois ele não saberá a sua senha.
                     </div>
@@ -204,7 +204,7 @@
                         </ul>
                     </a>
                 </div>
-                <div id="collapseThree" class="panel-collapse collapse">
+                <div id="collapseSix" class="panel-collapse collapse">
                     <div class="panel-body">
                         Não, os seus dados pessoais ficarão seguramente armazenados na base de dados iChose. Apenas para análises estatísticas de mercados e que essas informações poderão ser utilizadas, sempre de forma impessoal.
                     </div>
@@ -223,7 +223,7 @@
                         </ul>
                     </a>
                 </div>
-                <div id="collapseThree" class="panel-collapse collapse">
+                <div id="collapseSeven" class="panel-collapse collapse">
                     <div class="panel-body">
                         Ele deverá ser conduzido ao caixa, para que apresente o seu comprovante do cartão (que deverá ter sido enviado ao seu email). Em, caso de dúvida entre em contato com o colaborador iChose, por chat ou telefone.
                     </div>
