--- a/index.ejs
+++ b/index.ejs
@@ -153,6 +153,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="panel-group faq-content" id="accordion">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
@@ -166,7 +168,7 @@
                         </ul>
                     </a>
                 </div>
-                <div id="collapseFour" class="panel-collapse collapse">
+                <div id="collapseOne" class="panel-collapse collapse">
                     <div class="panel-body">
                         Não cobramos mensalidades, apenas no ato do pagamento do seu consumo o valor de R$ 4,39 / por comanda paga ou comprada como pré-pago. No caso dos ingressos, cobramos apenas 6% do valor do ingresso.
                     </div>
@@ -185,7 +187,7 @@
                         </ul>
                     </a>
                 </div>
-                <div id="collapseFive" class="panel-collapse collapse">
+                <div id="collapseTwo" class="panel-collapse collapse">
                     <div class="panel-body">
                         Não poderá pagar de forma alguma. Pois ele não saberá a sua senha.
                     </div>
@@ -204,12 +206,14 @@
                         </ul>
                     </a>
                 </div>
-                <div id="collapseSix" class="panel-collapse collapse">
+                <div id="collapseThree" class="panel-collapse collapse">
                     <div class="panel-body">
                         Não, os seus dados pessoais ficarão seguramente armazenados na base de dados iChose. Apenas para análises estatísticas de mercados e que essas informações poderão ser utilizadas, sempre de forma impessoal.
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="panel-group faq-content" id="accordion">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
@@ -222,8 +226,8 @@
                             </li>
                         </ul>
                     </a>
-                </div>
-                <div id="collapseSeven" class="panel-collapse collapse">
+                </div>                
+                <div id="collapseOne" class="panel-collapse collapse">
                     <div class="panel-body">
                         Ele deverá ser conduzido ao caixa, para que apresente o seu comprovante do cartão (que deverá ter sido enviado ao seu email). Em, caso de dúvida entre em contato com o colaborador iChose, por chat ou telefone.
                     </div>
