--- a/index.ejs
+++ b/index.ejs
@@ -95,6 +95,7 @@
         </div>
     </section>
     <section id="faq" class="faq">
+        <div class="row">
         <div class="panel-group faq-content" id="accordion">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -154,6 +155,8 @@
                 </div>
             </div>
         </div>
+        </div>
+        <div class="row">
         <div class="panel-group faq-content" id="accordion">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -213,6 +216,8 @@
                 </div>
             </div>
         </div>
+        </div>
+        <div class="row">
         <div class="panel-group faq-content" id="accordion">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -233,6 +238,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
     <section id="contact">
