--- a/index.ejs
+++ b/index.ejs
@@ -95,7 +95,6 @@
         </div>
     </section>
     <section id="faq" class="faq">
-        <div class="row">
         <div class="panel-group faq-content" id="accordion">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -155,7 +154,7 @@
                 </div>
             </div>
         </div>
-        </div>
+<!--        </div>
         <div class="row">
         <div class="panel-group faq-content" id="accordion">
             <div class="panel panel-default">
@@ -239,7 +238,7 @@
                 </div>
             </div>
         </div>
-        </div>
+        </div> -->
     </section>
     <section id="contact">
         <ul class="contact">
