--- a/index.ejs
+++ b/index.ejs
@@ -104,7 +104,7 @@
                                 <div>01</div>
                             </li>
                             <li class="faq-title">
-                                <div>Se acabar a bateria do meu celular na balada?</div>
+                                <div>Se acabar a bateria do meu iPhone na balada?</div>
                             </li>
                         </ul>
                     </a>
@@ -154,91 +154,6 @@
                 </div>
             </div>
         </div>
-<!--        </div>
-        <div class="row">
-        <div class="panel-group faq-content" id="accordion">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                        <ul class="faq-top">
-                            <li class="faq-count">
-                                <div>04</div>
-                            </li>
-                            <li class="faq-title">
-                                <div>Para usar o iChose tem que pagar alguma taxa ou mensalidade?</div>
-                            </li>
-                        </ul>
-                    </a>
-                </div>
-                <div id="collapseOne" class="panel-collapse collapse">
-                    <div class="panel-body">
-                        Não cobramos mensalidades, apenas no ato do pagamento do seu consumo o valor de R$ 4,39 / por comanda paga ou comprada como pré-pago. No caso dos ingressos, cobramos apenas 6% do valor do ingresso.
-                    </div>
-                </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                        <ul class="faq-top">
-                            <li class="faq-count">
-                                <div>05</div>
-                            </li>
-                            <li class="faq-title">
-                                <div>Se o iPhone for perdido, furtado ou roubado, poderá outra pessoa usá-lo para pagar a sua conta?</div>
-                            </li>
-                        </ul>
-                    </a>
-                </div>
-                <div id="collapseTwo" class="panel-collapse collapse">
-                    <div class="panel-body">
-                        Não poderá pagar de forma alguma. Pois ele não saberá a sua senha.
-                    </div>
-                </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                        <ul class="faq-top">
-                            <li class="faq-count">
-                                <div>06</div>
-                            </li>
-                            <li class="faq-title">
-                                <div>Minhas informações pessoais serão usadas para outros fins?</div>
-                            </li>
-                        </ul>
-                    </a>
-                </div>
-                <div id="collapseThree" class="panel-collapse collapse">
-                    <div class="panel-body">
-                        Não, os seus dados pessoais ficarão seguramente armazenados na base de dados iChose. Apenas para análises estatísticas de mercados e que essas informações poderão ser utilizadas, sempre de forma impessoal.
-                    </div>
-                </div>
-            </div>
-        </div>
-        </div>
-        <div class="row">
-        <div class="panel-group faq-content" id="accordion">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-                        <ul class="faq-top">
-                            <li class="faq-count">
-                                <div>07</div>
-                            </li>
-                            <li class="faq-title">
-                                <div>Se o cliente argumentar que já efetuou o pagamento, mas não consta no sistema. O que fazer?</div>
-                            </li>
-                        </ul>
-                    </a>
-                </div>                
-                <div id="collapseOne" class="panel-collapse collapse">
-                    <div class="panel-body">
-                        Ele deverá ser conduzido ao caixa, para que apresente o seu comprovante do cartão (que deverá ter sido enviado ao seu email). Em, caso de dúvida entre em contato com o colaborador iChose, por chat ou telefone.
-                    </div>
-                </div>
-            </div>
-        </div>
-        </div> -->
     </section>
     <section id="contact">
         <ul class="contact">
