--- a/index.ejs
+++ b/index.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js"
-      ng-app="iChosehotsite"
+<html ng-app="iChosehotsite"
       lang="pt-br">
 
 <head>
@@ -65,24 +64,42 @@
             <div class="carousel-inner brands-itens">
                 <ul class="item active">
                     <li>
-                        <div></div>
+                        <div> 
+                            <img src="..." 
+                                 alt="...">
+                        </div>
                     </li>
                     <li>
-                        <div></div>
+                        <div> 
+                            <img src="..." 
+                                 alt="...">
+                        </div>
                     </li>
                     <li>
-                        <div></div>
+                        <div> 
+                            <img src="..." 
+                                 alt="...">
+                        </div>
                     </li>
                 </ul>
                 <ul class="item"> 
                     <li>
-                        <div></div>
+                        <div> 
+                            <img src="..." 
+                                 alt="...">
+                        </div>
                     </li>
                     <li>
-                        <div></div>
+                        <div> 
+                            <img src="..." 
+                                 alt="...">
+                        </div>
                     </li>
                     <li>
-                        <div></div>
+                        <div> 
+                            <img src="..." 
+                                 alt="...">
+                        </div>
                     </li>
                 </ul>
             </div>
