--- a/index.ejs
+++ b/index.ejs
@@ -224,8 +224,10 @@
             </li>
         </ul>
     </footer>
-
-    <script src="http://code.jquery.com/jquery-2.1.0.js"
+    
+    <script src="http://code.jquery.com/jquery-2.0.2.min.js"
+                type="text/javascript">                                                                             </script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.2/angular.min.js"
                 type="text/javascript">                                                                             </script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"
                 type="text/javascript">                                                                             </script>
