--- a/index.ejs
+++ b/index.ejs
@@ -65,19 +65,19 @@
                 <ul class="item active">
                     <li>
                         <div> 
-                            <img src="..." 
+                            <img ng-src="{{listBalad[1].imagembanner}}" 
                                  alt="...">
                         </div>
                     </li>
                     <li>
                         <div> 
-                            <img src="..." 
+                            <img src="{{listBalad[2].imagembanner}}" 
                                  alt="...">
                         </div>
                     </li>
                     <li>
                         <div> 
-                            <img src="..." 
+                            <img src="{{listBalad[3].imagembanner}}" 
                                  alt="...">
                         </div>
                     </li>
@@ -85,19 +85,19 @@
                 <ul class="item"> 
                     <li>
                         <div> 
-                            <img src="..." 
+                            <img src="{{listBalad[4].imagembanner}}" 
                                  alt="...">
                         </div>
                     </li>
                     <li>
                         <div> 
-                            <img src="..." 
+                            <img src="{{listBalad[5].imagembanner}}" 
                                  alt="...">
                         </div>
                     </li>
                     <li>
                         <div> 
-                            <img src="..." 
+                            <img src="{{listBalad[6].imagembanner}}" 
                                  alt="...">
                         </div>
                     </li>
