--- a/index.ejs
+++ b/index.ejs
@@ -64,21 +64,21 @@
             <div class="carousel-inner brands-itens">
                 <ul class="item active">
                     <li>
-                        <div> 
+                  <!--      <div>  -->
                             <img ng-src="{{listBalad[1].imagembanner}}" 
-                                 alt="...">
-                        </div>
+                                 alt="{{listBalad[1].evento}}">
+                <!--        </div> -->
                     </li>
                     <li>
                         <div> 
                             <img ng-src="{{listBalad[2].imagembanner}}" 
-                                 alt="...">
+                                 alt="{{listBalad[2].evento}}">
                         </div>
                     </li>
                     <li>
                         <div> 
                             <img ng-src="{{listBalad[3].imagembanner}}" 
-                                 alt="...">
+                                 alt="{{listBalad[3].evento}}">
                         </div>
                     </li>
                 </ul>
@@ -86,19 +86,19 @@
                     <li>
                         <div> 
                             <img ng-src="{{listBalad[4].imagembanner}}" 
-                                 alt="...">
+                                 alt="{{listBalad[4].evento}}">
                         </div>
                     </li>
                     <li>
                         <div> 
                             <img ng-src="{{listBalad[5].imagembanner}}" 
-                                 alt="...">
+                                 alt="{{listBalad[5].evento}}">
                         </div>
                     </li>
                     <li>
                         <div> 
                             <img ng-src="{{listBalad[6].imagembanner}}" 
-                                 alt="...">
+                                 alt="{{listBalad[6].evento}}">
                         </div>
                     </li>
                 </ul>
