--- a/index.ejs
+++ b/index.ejs
@@ -64,21 +64,24 @@
             <div class="carousel-inner brands-itens">
                 <ul class="item active">
                     <li>
-                  <!--      <div>  -->
+                        <div>
                             <img ng-src="{{listBalad[1].imagembanner}}" 
-                                 alt="{{listBalad[1].evento}}">
-                <!--        </div> -->
+                                 alt="{{listBalad[1].evento}}"
+                                 class="img-circle">
+                        </div>
                     </li>
                     <li>
                         <div> 
                             <img ng-src="{{listBalad[2].imagembanner}}" 
-                                 alt="{{listBalad[2].evento}}">
+                                 alt="{{listBalad[2].evento}}"
+                                 class="img-circle">
                         </div>
                     </li>
                     <li>
                         <div> 
                             <img ng-src="{{listBalad[3].imagembanner}}" 
-                                 alt="{{listBalad[3].evento}}">
+                                 alt="{{listBalad[3].evento}}"
+                                 class="img-circle">
                         </div>
                     </li>
                 </ul>
@@ -86,19 +89,22 @@
                     <li>
                         <div> 
                             <img ng-src="{{listBalad[4].imagembanner}}" 
-                                 alt="{{listBalad[4].evento}}">
+                                 alt="{{listBalad[4].evento}}"
+                                 class="img-circle">
                         </div>
                     </li>
                     <li>
                         <div> 
                             <img ng-src="{{listBalad[5].imagembanner}}" 
-                                 alt="{{listBalad[5].evento}}">
+                                 alt="{{listBalad[5].evento}}"
+                                 class="img-circle">
                         </div>
                     </li>
                     <li>
                         <div> 
                             <img ng-src="{{listBalad[6].imagembanner}}" 
-                                 alt="{{listBalad[6].evento}}">
+                                 alt="{{listBalad[6].evento}}"
+                                 class="img-circle">
                         </div>
                     </li>
                 </ul>
