--- a/index.ejs
+++ b/index.ejs
@@ -67,7 +67,9 @@
                         <div>
                             <img ng-src="{{listBalad[1].imagembanner}}" 
                                  alt="{{listBalad[1].evento}}"
-                                 class="img-circle">
+                                 class="img-circle"
+                                 width="125" 
+                                 height="125">
                         </div>
                     </li>
                     <li>
