--- a/index.ejs
+++ b/index.ejs
@@ -68,7 +68,7 @@
                             <img ng-src="{{listBalad[1].imagembanner}}" 
                                  alt="{{listBalad[1].evento}}"
                                  class="img-circle"
-                                 width="230" 
+                                 width="250" 
                                  height="200">
                         </div>
                     </li>
@@ -76,14 +76,18 @@
                         <div> 
                             <img ng-src="{{listBalad[2].imagembanner}}" 
                                  alt="{{listBalad[2].evento}}"
-                                 class="img-circle">
+                                 class="img-circle"
+                                 width="250" 
+                                 height="200">
                         </div>
                     </li>
                     <li>
                         <div> 
                             <img ng-src="{{listBalad[3].imagembanner}}" 
                                  alt="{{listBalad[3].evento}}"
-                                 class="img-circle">
+                                 class="img-circle"
+                                 width="250" 
+                                 height="200">
                         </div>
                     </li>
                 </ul>
