--- a/index.ejs
+++ b/index.ejs
@@ -69,7 +69,7 @@
                                  alt="{{listBalad[1].evento}}"
                                  class="img-circle"
                                  width="250" 
-                                 height="200">
+                                 height="156">
                         </div>
                     </li>
                     <li>
@@ -78,7 +78,7 @@
                                  alt="{{listBalad[2].evento}}"
                                  class="img-circle"
                                  width="250" 
-                                 height="200">
+                                 height="156">
                         </div>
                     </li>
                     <li>
@@ -87,7 +87,7 @@
                                  alt="{{listBalad[3].evento}}"
                                  class="img-circle"
                                  width="250" 
-                                 height="200">
+                                 height="156">
                         </div>
                     </li>
                 </ul>
@@ -96,21 +96,27 @@
                         <div> 
                             <img ng-src="{{listBalad[4].imagembanner}}" 
                                  alt="{{listBalad[4].evento}}"
-                                 class="img-circle">
+                                 class="img-circle"
+                                 width="250" 
+                                 height="156">
                         </div>
                     </li>
                     <li>
                         <div> 
                             <img ng-src="{{listBalad[5].imagembanner}}" 
                                  alt="{{listBalad[5].evento}}"
-                                 class="img-circle">
+                                 class="img-circle"
+                                 width="250" 
+                                 height="156">
                         </div>
                     </li>
                     <li>
                         <div> 
                             <img ng-src="{{listBalad[6].imagembanner}}" 
                                  alt="{{listBalad[6].evento}}"
-                                 class="img-circle">
+                                 class="img-circle"
+                                 width="250" 
+                                 height="156">
                         </div>
                     </li>
                 </ul>
