--- a/index.ejs
+++ b/index.ejs
@@ -64,31 +64,31 @@
             <div class="carousel-inner brands-itens">
                 <ul class="item active">
                     <li>
-                        <div>
+                    <!--    <div> -->
                             <img ng-src="{{listBalad[1].imagembanner}}" 
                                  alt="{{listBalad[1].evento}}"
                                  class="img-circle"
                                  width="250" 
                                  height="156">
-                        </div>
+                <!--        </div> -->
                     </li>
                     <li>
-                        <div> 
+                    <!--    <div> -->
                             <img ng-src="{{listBalad[2].imagembanner}}" 
                                  alt="{{listBalad[2].evento}}"
                                  class="img-circle"
                                  width="250" 
                                  height="156">
-                        </div>
+            <!--            </div> -->
                     </li>
                     <li>
-                        <div> 
+                <!--        <div> -->
                             <img ng-src="{{listBalad[3].imagembanner}}" 
                                  alt="{{listBalad[3].evento}}"
                                  class="img-circle"
                                  width="250" 
                                  height="156">
-                        </div>
+            <!--            </div> -->
                     </li>
                 </ul>
                 <ul class="item"> 
