--- a/index.ejs
+++ b/index.ejs
@@ -64,60 +64,60 @@
             <div class="carousel-inner brands-itens">
                 <ul class="item active">
                     <li>
-                    <!--    <div> -->
+                        <a ng-href="{{listBalad[1].website}}">
                             <img ng-src="{{listBalad[1].imagembanner}}" 
                                  alt="{{listBalad[1].evento}}"
-                                 class="img-circle"
+                                 class="img-circle img-responsive"
                                  width="250" 
                                  height="156">
-                <!--        </div> -->
+                        </a>
                     </li>
                     <li>
-                    <!--    <div> -->
+                        <a ng-href="{{listBalad[2].website}}">
                             <img ng-src="{{listBalad[2].imagembanner}}" 
                                  alt="{{listBalad[2].evento}}"
-                                 class="img-circle"
+                                 class="img-circle img-responsive"
                                  width="250" 
                                  height="156">
-            <!--            </div> -->
+                        </a>
                     </li>
                     <li>
-                <!--        <div> -->
+                        <a ng-href="{{listBalad[3].website}}">
                             <img ng-src="{{listBalad[3].imagembanner}}" 
                                  alt="{{listBalad[3].evento}}"
-                                 class="img-circle"
+                                 class="img-circle img-responsive"
                                  width="250" 
                                  height="156">
-            <!--            </div> -->
+                        </a>
                     </li>
                 </ul>
                 <ul class="item"> 
                     <li>
-                        <div> 
+                        <a ng-href="{{listBalad[4].website}}">
                             <img ng-src="{{listBalad[4].imagembanner}}" 
                                  alt="{{listBalad[4].evento}}"
-                                 class="img-circle"
+                                 class="img-circle img-responsive"
                                  width="250" 
                                  height="156">
-                        </div>
+                        </a>
                     </li>
                     <li>
-                        <div> 
+                        <a ng-href="{{listBalad[5].website}}">
                             <img ng-src="{{listBalad[5].imagembanner}}" 
                                  alt="{{listBalad[5].evento}}"
-                                 class="img-circle"
+                                 class="img-circle img-responsive"
                                  width="250" 
                                  height="156">
-                        </div>
+                        </a>
                     </li>
                     <li>
-                        <div> 
+                        <a ng-href="{{listBalad[6].website}}">
                             <img ng-src="{{listBalad[6].imagembanner}}" 
                                  alt="{{listBalad[6].evento}}"
-                                 class="img-circle"
+                                 class="img-circle img-responsive"
                                  width="250" 
                                  height="156">
-                        </div>
+                        </a>
                     </li>
                 </ul>
             </div>
