--- a/index.ejs
+++ b/index.ejs
@@ -195,7 +195,7 @@
     <section id="contact">
         <ul class="contact">
             <li class="form-area">
-                <form>
+                <form action="" method="post">
                     <textarea placeholder ="Mensagem"
                               class       ="form-control" 
                               ng-model    ="sacData.mensagem"
@@ -211,6 +211,30 @@
                     <input type         ="submit" 
                            value        ="Olá"
                            ng-click     ="enviar()">
+                    <div class      = "alert alert-success alert-dismissible"
+                             role       = "alert"
+                             ng-show    = "show.sucesso">
+                             <button 
+                                     type           = "button" 
+                                     class          = "close" 
+                                     data-dismiss   = "alert">
+                                 <span aria-hidden  = "true">&times;</span>
+                                 <span class="sr-only">Close</span>
+                              </button>
+                              <h4>Obrigado, foi enviado um e-mail para confirmação.</h4> 
+                        </div>
+                        <div class      = "alert alert-warning alert-dismissible"
+                             role       = "alert"
+                             ng-hide    = "show.alerta">
+                             <button 
+                                     type           = "button" 
+                                     class          = "close" 
+                                     data-dismiss   = "alert">
+                                 <span aria-hidden  = "true">&times;</span>
+                                 <span class="sr-only">Close</span>
+                             </button>
+                             <h4>Opss, algo está errado, digite novamente outro e-mail.</h4> 
+                    </div>
                 </form>
             </li>
             <li class="logo-area">
